Setup tests for new structure